# data-epic-data-engineering

./: .gitignore  Readme.md
Materials/Software Engineering Foundations - Week 1/: README
Task/Task 1/weather_api/: .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml
Task/Task 1/weather_api/scraper/: google_sheet.py  scraper.py
Task/Task 1/weather_api/tests/: test_scraper.py
Task/Task 1/weather_api/utils/: google_sheet_utils.py  utils.py
Task/Task 2/: .env  .env_example
Task/Task 3/database-fundamentals/: .env.example  .env_example  .gitignore  README.md  main.py  pyproject.toml
Task/Task 3/database-fundamentals/api/: crud.py  routes.py  schema.py
Task/Task 3/database-fundamentals/database/: crud.py  db_setup.py  model.py  utils.py
Task/Task 3/database-fundamentals/logger/: logger.py
Task/Task 3/database-fundamentals/notebook/: data_modelling.ipynb
Task/Task 3/database-fundamentals/scripts/: config.py  load_data.py  utils.py
Task/Task 4/: README.md
Task/Task5/: final presentation.pptx  teamB_slide.pptx  (+1 more)
Task/Task5/Stock-Market-Data-Streaming-Analysis/: .gitignore  README.md  pyproject.toml
Task/Task5/Stock-Market-Data-Streaming-Analysis/.github/workflows/: lambda_deployment.yaml  lambda_producer_deployment.yaml
Task/Task5/Stock-Market-Data-Streaming-Analysis/data_to_db/: README.md  send_data_to_db.py
Task/Task5/Stock-Market-Data-Streaming-Analysis/producer/: lambda_function.py
Task/Task5/Stock-Market-Data-Streaming-Analysis/sql/: moving_average.sql  price_change.sql  volume_spike.sql
Task/Task5/Stock-Market-Data-Streaming-Analysis/transformer/: lambda_function.py
capstone-project/ai-agent-directory/: README.md  pyproject.toml
capstone-project/ai-agent-directory/backend/: .env_example  .pre-commit-config.yaml  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
capstone-project/ai-agent-directory/backend/.gtihub/workflows/: precommit-hook.yml
capstone-project/ai-agent-directory/backend/alembic/: env.py
capstone-project/ai-agent-directory/backend/alembic/versions/: 9e406cb2a3cf_migrate_db.py
capstone-project/ai-agent-directory/backend/app/: app.py
capstone-project/ai-agent-directory/backend/app/api/route/: agent.py  highlight.py  review.py  user.py
capstone-project/ai-agent-directory/backend/app/api/utils/: create_initial_admin.py
capstone-project/ai-agent-directory/backend/app/auth/: auth.py  bearer.py  dependency.py
capstone-project/ai-agent-directory/backend/app/core/: database.py
capstone-project/ai-agent-directory/backend/app/core/models/: agent.py  highlight.py  review.py  user.py
capstone-project/ai-agent-directory/backend/app/schema/: agent.py  highlight.py  review.py  user.py
capstone-project/ai-agent-directory/backend/app/tests/: test_agent_route.py  test_dummy.py  test_highlight_route.py  test_models.py  test_review_route.py  test_user_route.py
capstone-project/ai-agent-directory/etl/data/: seeded_ai_agents.csv
(+36 files in other folders)
