[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["sammygis <adedoyinsamuel25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
html-parser = "^0.2"
pandas = "^2.2.3"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
gspread-pandas = "^3.3.0"
gspread = "5.0.0"
oauth2client = "^4.1.3"


[tool.poetry.group.pandas.dependencies]
pytest = "^8.3.4"
requests = "^2.32.3"
bs4 = "^0.0.2"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
